<resources>
    <string name="app_name">Football Coach Manager</string>
    <string name="no_photo_img">Entrenador sin foto</string>
    <string name="coach_name">Nombre del entrenador</string>
    <string name="coach_surname">Apellidos del entrendor</string>
    <string name="coach_settings">Opciones del entrenador</string>
    <string name="team_name">Nombre del equipo</string>
    <string name="info_img">Imagen información</string>
    <string name="team_management">Administrar equipo</string>
    <string name="team_management_img">Imagen administrar equipo</string>
    <string name="digital_board">Pizarra digital</string>
    <string name="digital_board_img">Imagen pizarra digital</string>
    <string name="go_match">Ir al partido</string>
    <string name="go_match_img">Imagen ir al partido</string>
    <string name="msg_no_match">No tiene un partido hoy</string>
    <string name="team_calendar">Calendario</string>
    <string name="team_calendar_img">Imagen calendario</string>
    <string name="op_no">No</string>
    <string name="op_si">Si</string>
    <string name="title_popup_blackboard">Pizarra digital</string>
    <string name="main_menu_settings">Opciones</string>
    <string name="bb_menu_exit">Salir</string>
    <string name="bb_menu_save">Guardar</string>
    <string name="bb_menu_restore">Restablecer</string>
    <string name="no_training">No hay entrenamiento</string>
    <string name="no_match">No hay partido</string>
    <string name="there_are">Hay</string>
    <string name="training">entrenamiento</string>
    <string name="trainings">entrenamientos</string>
    <string name="match">partido</string>
    <string name="add_event_img">Imagen agregar evento</string>
    <string name="look_stats_img">Imagen ver estadísticas</string>
    <string name="edit_event_img">Imagen editar evento</string>
    <string name="delete_event_img">Imagen eliminar evento</string>
    <string name="delete_training">Borrar entrenamiento</string>
    <string name="delete_match">Borrar partido</string>
    <string name="title_page_calendar">Calendario</string>
    <string name="title_activity_config_entre">Config_entre</string>
    <string name="action_settings">Preferencias</string>
    <string name="title_activity_pop_up_nuevo_jugador">Crear Nuevo Jugador</string>
    <string name="title_activity_pop_up_nuevo_entrenamiento">Crear Nuevo Entrenamiento</string>
    <string name="title_activity_pop_up_nuevo_partido">Crear Nuevo Partido</string>
    <string name="add_photo_gallery">Añadir foto de la galería</string>
    <string name="add_photo_camera">Hacer foto</string>
    <string name="pop_ups_nuevos_fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="tipo_entrenamiento">Tipo Entrenamiento</string>
    <string name="editar_foto">Editar Foto</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad:</string>
    <string name="dorsal">Dorsal</string>
    <string name="lugar">Lugar</string>
    <string name="rival">Rival</string>
    <string name="observaciones">Observaciones</string>
    <string name="titulo_entrenamiento">Título Entrenamiento</string>
    <string name="statistics">Estadísticas</string>
    <string name="playingGround_toast_no_player_selected">No se ha seleccionado ningún jugador</string>
    <string name="playingGround_toast_cancel_swap_player">Se ha candelado el intercambio</string>
    <string name="activity_nuevoEntrenador_lblEntrenador">Entrenador</string>
    <string name="activity_nuevoEntrenador_lblNomEntrenador">Nombre:</string>
    <string name="activity_nuevoEntrenador_lblApellidosEntrenador">Apellidos:</string>
    <string name="activity_nuevoEntrenador_btnGuardarCambios">Guardar Cambios</string>
    <string name="activity_nuevoEntrenador_lblEquipo">Equipo</string>
    <string name="activity_nuevoEntrenador_lblNomEquipo">Nombre:</string>
    <string name="activity_nuevoEntrenador_lblCiudadEquipo">Ciudad:</string>
    <string name="activity_nuevoEntrenador_lblContrasenya">Nueva Contraseña</string>
    <string name="activity_nuevoEntrenador_lblNewContra">Repita Contraseña:</string>
    <string name="activity_nuevoEntrenador_lblRepNewContra">Repite Contraseña</string>
    <string name="activity_nuevoEntrenador_lblContraActual">Contraseña Actual:</string>
    <string name="popup_newUser_lblUser">Usuario:*</string>
    <string name="popup_newUser_lblNombre">Nombre:*</string>
    <string name="popup_newUser_lblApellidos">Apellidos:*</string>
    <string name="popup_newUser_lblContrasenya">Contraseña:*</string>
    <string name="popup_newUser_lblRepContrasenya">Repita Contraseña:*</string>
    <string name="popup_newUser_lblPreguntaSecreta">Elija una pregunta secreta:*</string>
    <string name="popup_newUser_lblRespuesta">Respuesta:*</string>
    <string name="popup_newUser_btnGuardar">Guardar</string>
    <string name="popup_newUser_camposObligatorios">* Los campos son obligatorios</string>
    <string name="popup_recoverPass_lblIntroUser">Introduzca Usuario:</string>
    <string name="popup_recoverPass_btnComprobar">Comprobar</string>
    <string name="popup_recoverPass_lblPreguntaSecreta">Pregunta secreta:</string>
    <string name="popup_recoverPass_lblContrasenya">Tu contraseña es:</string>
    <string name="popup_recoverPass_lblVolver">Aceptar</string>
    <string name="no_data">No hay datos</string>
    <string name="yes_data">Datos</string>
    <string-array name="TipoEntrenamiento">
        <item>Resistencia</item>
        <item>Fuerza</item>
        <item>Agilidad</item>
        <item>Específico</item>
    </string-array>
    <string-array name="TipoModulo">
        <item>Repeticiones</item>
        <item>Series</item>
        <item>Jugadas</item>
    </string-array>
	<string-array name="PreguntasSeguridad">
        <item>¿Cuál es tu comida favorita?</item>
        <item>¿Cómo se llama tu mascota?</item>
        <item>¿Cuál es el nombre de la ciudad donde naciste?</item>
        <item>¿Cuál es tu color favorito?</item>
    </string-array>
    <string name="title_activity_pop_up_config_entre">PopUp_config_entre</string>
    <string name="title_activity_estadisticas_jugador">EstadisticasJugador</string>
    <string-array name="TipoJugador">
        <item>Ataque</item>
        <item>Defensa</item>
        <item>Equipos Especiales</item>
    </string-array>
    <string-array name="PosicionAtaque">
        <item>C</item>
        <item>LG</item>
        <item>RG</item>
        <item>LT</item>
        <item>RT</item>
        <item>QB</item>
        <item>RB</item>
        <item>HB</item>
        <item>FB</item>
        <item>WR</item>
        <item>TE</item>
    </string-array>
    <string-array name="PosicionDefensa">
        <item>DT</item>
        <item>DE</item>
        <item>NT</item>
        <item>CB</item>
        <item>FS</item>
        <item>SS</item>
        <item>LB</item>
    </string-array>
    <string-array name="PosicionEE">
        <item>K</item>
        <item>P</item>
    </string-array>
    <string name="player_list">Lista de jugadores</string>
    <string name="dorsal_number">0</string>
    <string name="player_name">Nombre del Jugador</string>
    <string name="player_surname">Apellidos del jugador</string>
    <string name="position">Posición:</string>
    <string name="position_name">nombre de la posición</string>
    <string name="no_players">No hay jugadores</string>
    <string name="div_img">Imagen divisoria</string>
    <string name="add_player">Añadir jugador</string>
    <string name="edit_player">Editar jugador</string>
    <string name="delete_player">Borrar jugador</string>
    <string name="playingGround_gridView_header">Jugadores en el Campo</string>
    <string name="playingGround_popup_players_selector_title">PlayersSelectorPopupActivity</string>
    <string name="playingGround_lbl_first_players">Haga Clic aqui para seleccionar los primeros jugadores</string>
    <string name="btn_OK">Aceptar</string>
    <string name="btn_CANCEL">Cancelar</string>
    <string name="playingGround_btn_action_finish_event">Finalizar Evento</string>
    <string name="playingGround_option_att_rbtn0">Touchdown</string>
    <string name="playingGround_option_att_rbtn1">Carrera</string>
    <string name="playingGround_option_att_rbtn2">Pase</string>
    <string name="playingGround_option_att_rbtn3">Falta</string>
    <string name="playingGround_option_def_rbtn0">Bloqueo</string>
    <string name="playingGround_option_def_rbtn1">Intercepcion</string>
    <string name="playingGround_option_def_rbtn2">Falta</string>
    <string name="playingGround_option_ee_rbtn0">Field Goal</string>
    <string name="playingGround_option_ee_rbtn1">Extra Point</string>
    <string name="playingGround_option_ee_rbtn2">Extra Game</string>
    <string name="playingGround_option_ee_rbtn3">4DOWN</string>
    <string name="playingGround_option_ee_rbtn4">Falta</string>
    <string name="playingGround_fragment_textView_numPick">Yardas</string>
    <string name="conditional_option_yes">Si</string>
    <string name="conditional_option_no">No</string>
    <string name="playingGround_fragment_dim2_att4_def3_ee5_textView_conditional">¿ A favor ?</string>
    <string name="playingGround_popup_toast1">DEBES seleccionar al menos 11 Jugadores</string>
    <string name="playingGround_popup_toast2">DEBES seleccionar al menos 1 Jugador o puedes Cancelar</string>
    <string name="playingGround_fragment_dim3_att4_def3_ee5_textView_conditional">¿ Penalización ?</string>
    <string name="playingGround_fragment_dim3_att23_textView_conditional">¿ Pasa linea de scremeage ?</string>
    <string name="playingGround_fragment_dim3_def1_textView_conditional">¿ El contrincante pasa linea de scremeage ?</string>
    <string name="playingGround_template_position">Posición:</string>
    <string name="playingGround_fragment_final_words_1">Hizo</string>
    <string name="playingGround_fragment_final_words_2">con</string>
    <string name="playingGround_fragment_final_words_3">a favor</string>
    <string name="playingGround_fragment_final_words_4">en contra</string>
    <string name="playingGround_fragment_final_words_5">Pasa linea de screameage</string>
    <string name="playingGround_fragment_final_words_6">No pasa linea de screameage.</string>
    <string name="playingGround_fragment_final_words_7">El contrincante pasa linea de scremeage</string>
    <string name="playingGround_fragment_final_words_8">El contrincante no pasa linea de scremeage</string>
    <string name="playingGround_fragment_dim3_att4_def3_ee5_textView_player">Jugador afectado:</string>
    <string name="playingGround_fragment_dim2_att3_textView_selection">Jugador que recibe:</string>
    <string name="playingGround_fragment_final_words_9">al jugador</string>
    <string name="playingGround_fragment_final_words_10">con penalización</string>
    <string name="playingGround_fragment_final_words_11">sin penalización</string>
    <string name="playingGround_fragment_final_words_12">de</string>
    <string name="playingGround_fragment_final_words_13">hacia</string>
    <string name="acerca_de">Acerca de la aplicación.</string>
    <string name="explicacion_acerca_de">Football Coach Manager (F.C.M.) es una aplicación dirigida a deportistas y a entrenadores de fútbol americano. A través de su funcionalidad estos podrán mejorar el rendimiento tanto de forma individual como a nivel de equipo.</string>
    <string name="miembros_grupo">Contacto:</string>
    <string name="Vistadetallada_calendario_tipo">Tipo:</string>
    <string name="Vistadetallada_calendario_rival">Rival:</string>
    <string name="Vistadetallada_calendario_hora">Hora:</string>
    <string name="title_activity_pantalla_perfil_entrenador">Perfil Entrenador</string>
    <string name="login_screen_textview_signin">Introduzca Usuario</string>
    <string name="login_screen_btn_singin">Iniciar</string>
</resources>