<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_cow"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PopUpNuevoEditarJugador" >

    <LinearLayout
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:gravity="center|left|right"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextNombreJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:textColor="@color/white"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextApellidosJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/apellidos"
            android:textColor="@color/white"
            android:ems="10" />

        <EditText
            android:id="@+id/editTextEdadJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edad"
            android:textColor="@color/white"
            android:ems="10"
            android:maxLength="2"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinnerTipoJugador"
            android:layout_width="231dp"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinnerPosicionJugador"
            android:layout_width="231dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editTextDorsalJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dorsal"
            android:textColor="@color/white"
            android:maxLength="2"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/foto_Jugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_coach_photo"
            android:contentDescription="@string/add_event_img" />

        <Button
            android:id="@+id/editarFotoJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_foto" />

        <Button
            android:id="@+id/guardarJugadorNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="guardarNuevoPartido"
            android:text="@string/bb_menu_save" />

    </LinearLayout>

</LinearLayout>
