<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_cow"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PopUpNuevoPartido" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <EditText
            android:id="@+id/lugarPartidoNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lugar"
            android:textColor="@color/white" >

            <requestFocus />
        </EditText>

        <Space
            android:layout_width="150dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txtViewDiaPartido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_ups_nuevos_fecha"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <DatePicker
            android:id="@+id/fecha_PartidoNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <EditText
            android:id="@+id/rivalPartido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" 
            android:ems="10"
            android:hint="@string/rival" />

        <Space
            android:layout_width="243dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txtViewHoraPartido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hora"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TimePicker
            android:id="@+id/hora_PartidoNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <EditText
        android:id="@+id/observacionesEntrenamientoNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:hint="@string/observaciones" />

    <Button
        android:id="@+id/guardarPartidoNuevo"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="guardarNuevoEntrenamiento"
        android:text="@string/bb_menu_save" />

</LinearLayout>
