<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:background="@drawable/borde_items_lista"
    android:padding="5dp" >

    <TextView
        android:id="@+id/dorsal_player_lista"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/dorsal_number"
        android:textColor="@color/black"
        android:textSize="44sp"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/nombre_player_lista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="serif" />
            
            <TextView
                android:id="@+id/apellidos_player_lista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_surname"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="serif" />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/posicion_lista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/posicion_player_lista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="serif" />
       
            </LinearLayout>
        
    </LinearLayout>
    
</LinearLayout>