<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_cow"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PerfilEntrenador" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center|left|right|top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_nuevoEntrenador_lblEntrenador"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/photo_entrenador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/info_img"
            android:src="@drawable/no_coach_photo" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:text="@string/editar_foto" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_nuevoEntrenador_lblNomEntrenador"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/new_nom_Entrenador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/app_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_nuevoEntrenador_lblApellidosEntrenador"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/new_apellidos_Entrenador"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:ems="10" />

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_nuevoEntrenador_btnGuardarCambios" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        
        <ImageView
        android:id="@+id/divisor_azul_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/div_img"
        android:gravity="left"
        android:src="@drawable/divider_element" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_nuevoEntrenador_lblEquipo"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_nuevoEntrenador_lblNomEquipo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/new_nom_Equipo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_nuevoEntrenador_lblCiudadEquipo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/new_ciudad_Equipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/app_name" />

        </LinearLayout>

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_nuevoEntrenador_btnGuardarCambios" />
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <ImageView
        android:id="@+id/img_div1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/div_img"
        android:gravity="left"
        android:src="@drawable/separator_vertical_glow_black" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_nuevoEntrenador_lblContrasenya"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_nuevoEntrenador_lblContrasenya"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/new_pass_Entrenador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_nuevoEntrenador_lblNewContra"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/rep_new_pass_Entrenador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10" />

        </LinearLayout>

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_nuevoEntrenador_btnGuardarCambios" />
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        
        <ImageView
        android:id="@+id/divisor_azul_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:contentDescription="@string/div_img"
        android:gravity="left"
        android:src="@drawable/divider_element" />
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

</LinearLayout>